@@ -30,9 +30,9 @@ import java.util.Map;
 import org.jclouds.compute.domain.OperatingSystem;
 import org.jclouds.compute.predicates.OperatingSystemPredicates;
 import org.jclouds.scriptbuilder.InitBuilder;
-import org.jclouds.scriptbuilder.domain.AuthorizeRSAPublicKey;
 import org.jclouds.scriptbuilder.domain.Statement;
 import org.jclouds.scriptbuilder.domain.Statements;
+import org.jclouds.scriptbuilder.statements.login.AdminAccess;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
@@ -66,23 +66,60 @@ public class RunScriptData {
                exec("iptables-save"));
    }
 
-   public static Statement createScriptInstallAndStartJBoss(String publicKey, OperatingSystem os) {
+   public static Statement createScriptInstallAndStartJBoss(OperatingSystem os) {
       Map<String, String> envVariables = ImmutableMap.of("jbossHome", jbossHome);
       Statement toReturn = new InitBuilder(
                "jboss",
                jbossHome,
                jbossHome,
                envVariables,
-               ImmutableList.<Statement> of(new AuthorizeRSAPublicKey(publicKey),//
+               ImmutableList.<Statement> of(AdminAccess.standard(),//
                         installJavaAndCurl(os),//
                         authorizePortInIpTables(8080),
                         extractTargzIntoDirectory(URI.create(System.getProperty("test.jboss-url",
-                                 "http://d37gkgjhl3prlk.cloudfront.net/jboss-6.0.0.Final.tar.gz")), "/usr/local"),//
+                                 "http://d37gkgjhl3prlk.cloudfront.net/jboss-7.0.0.CR1.tar.gz")), "/usr/local"),//
                         exec("{md} " + jbossHome), exec("mv /usr/local/jboss-*/* " + jbossHome),//
+                        changeStandaloneConfigToListenOnAllIPAddresses(),
                         exec("chmod -R oug+r+w " + jbossHome)),//
+               //TODO http://community.jboss.org/wiki/AS7StartupTimeShowdown
                ImmutableList
-                        .<Statement> of(interpret("java -Xms128m -Xmx512m -XX:MaxPermSize=256m -Dorg.jboss.resolver.warning=true -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Djava.endorsed.dirs=lib/endorsed -classpath bin/run.jar org.jboss.Main -c jbossweb-standalone -b 0.0.0.0")));
+                        .<Statement> of(interpret(new StringBuilder().append("java ").append(' ')
+                                 .append("-Xms64m -Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Dorg.jboss.resolver.warning=true -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000").append(' ')
+                                 .append("-Djboss.modules.system.pkgs=org.jboss.byteman").append(' ')
+                                 .append("-Dorg.jboss.boot.log.file=$JBOSS_HOME/standalone/log/boot.log").append(' ')
+                                 .append("-Dlogging.configuration=file:$JBOSS_HOME/standalone/configuration/logging.properties").append(' ')
+                                 .append("-jar $JBOSS_HOME/jboss-modules.jar").append(' ')
+                                 .append("-mp $JBOSS_HOME/modules").append(' ')
+                                 .append("-logmodule org.jboss.logmanager").append(' ')
+                                 .append("-jaxpmodule javax.xml.jaxp-provider").append(' ')
+                                 .append("org.jboss.as.standalone").append(' ')
+                                 .append("-Djboss.home.dir=$JBOSS_HOME")
+                                 .toString())));
       return toReturn;
+   }
+
+   public static Statement normalizeHostAndDNSConfig() {
+      return newStatementList(//
+               addHostnameToEtcHostsIfMissing(),//
+               addDnsToResolverIfMissing());
+   }
+
+   public static Statement addHostnameToEtcHostsIfMissing() {
+      return exec("grep `hostname` /etc/hosts >/dev/null || awk -v hostname=`hostname` 'END { print $1\" \"hostname }' /proc/net/arp >> /etc/hosts");
+   }
+
+   public static Statement addDnsToResolverIfMissing() {
+      return exec("nslookup yahoo.com >/dev/null || echo nameserver 208.67.222.222 >> /etc/resolv.conf");
+   }
+
+   public static Statement installSunJDKFromWhirrIfNotPresent() {
+      return newStatementList(exec("(which java && java -fullversion 2>&1|egrep -q 1.6 ) ||"),//
+               execHttpResponse(URI.create("http://whirr.s3.amazonaws.com/0.3.0-incubating/sun/java/install")));
+   }
+
+   // TODO make this a cli option
+   private static Statement changeStandaloneConfigToListenOnAllIPAddresses() {
+      return exec("(cd $JBOSS_HOME/standalone/configuration && sed 's~inet-address value=.*/~any-address/~g' standalone.xml > standalone.xml.new && mv standalone.xml.new standalone.xml)");
    }
 
    public static String aptInstall = "apt-get install -f -y -qq --force-yes";
@@ -93,28 +130,21 @@ public class RunScriptData {
    }
 
    public static final Statement APT_RUN_SCRIPT = newStatementList(//
+            normalizeHostAndDNSConfig(),//
             exec(installAfterUpdatingIfNotPresent("curl")),//
-            exec("(which java && java -fullversion 2>&1|egrep -q 1.6 ) ||"),//
-            execHttpResponse(URI.create("http://whirr.s3.amazonaws.com/0.2.0-incubating-SNAPSHOT/sun/java/install")),//
-            exec(new StringBuilder()//
-                     .append("echo nameserver 208.67.222.222 >> /etc/resolv.conf\n")//
-                     // jeos hasn't enough room!
-                     .append("rm -rf /var/cache/apt /usr/lib/vmware-tools\n")//
-                     .append("echo \"export PATH=\\\"\\$JAVA_HOME/bin/:\\$PATH\\\"\" >> /root/.bashrc")//
-                     .toString()));
+            installSunJDKFromWhirrIfNotPresent(),//
+            exec("rm -rf /var/cache/apt /usr/lib/vmware-tools"),//
+            exec("echo \"export PATH=\\\"\\$JAVA_HOME/bin/:\\$PATH\\\"\" >> /root/.bashrc"));
 
-   public static final Statement YUM_RUN_SCRIPT = newStatementList(
-            exec("which curl ||yum --nogpgcheck -y install curl"),//
-            exec("(which java && java -fullversion 2>&1|egrep -q 1.6 ) ||"),//
-            execHttpResponse(URI.create("http://whirr.s3.amazonaws.com/0.2.0-incubating-SNAPSHOT/sun/java/install")),//
-            exec(new StringBuilder()//
-                     .append("echo nameserver 208.67.222.222 >> /etc/resolv.conf\n") //
-                     .append("echo \"export PATH=\\\"\\$JAVA_HOME/bin/:\\$PATH\\\"\" >> /root/.bashrc")//
-                     .toString()));
+   public static final Statement YUM_RUN_SCRIPT = newStatementList(//
+            normalizeHostAndDNSConfig(),//
+            exec("which curl || yum --nogpgcheck -y install curl"),//
+            installSunJDKFromWhirrIfNotPresent(),//
+            exec("echo \"export PATH=\\\"\\$JAVA_HOME/bin/:\\$PATH\\\"\" >> /root/.bashrc"));
 
-   public static final Statement ZYPPER_RUN_SCRIPT = exec(new StringBuilder()//
-            .append("echo nameserver 208.67.222.222 >> /etc/resolv.conf\n")//
-            .append("which curl || zypper install curl\n")//
-            .append("(which java && java -fullversion 2>&1|egrep -q 1.6 ) || zypper install java-1.6.0-openjdk\n")//
-            .toString());
+   public static final Statement ZYPPER_RUN_SCRIPT = newStatementList(//
+            normalizeHostAndDNSConfig(),//
+            exec("which curl || zypper install curl"),//
+            exec("(which java && java -fullversion 2>&1|egrep -q 1.6 ) || zypper install java-1.6.0-openjdk"),//
+            exec("echo \"export PATH=\\\"\\$JAVA_HOME/bin/:\\$PATH\\\"\" >> /root/.bashrc"));
 }
